/*
 * Copyright 2019, TeamDev. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.event;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.event";
option java_multiple_files = true;

import "spine/core/user_id.proto";
import "spine/net/email_address.proto";
import "spine/test/event/project.proto";

message EvTeamId {
    string id = 1;
}

message EvMemberInvitation {

    spine.net.EmailAddress email = 1;

    EvTeamId team_id = 2;
}

message EvTeam {
    option (entity).kind = AGGREGATE;

    EvTeamId id = 1;

    repeated ProjectId project_id = 2;

    repeated EvMember member = 3;

    repeated EvMemberInvitation invitation = 4;
}

message EvMember {

    spine.core.UserId user_id = 1;

    string name = 2;
}

message EvTeamCreation {
    option (entity).kind = PROCESS_MANAGER;

    EvTeamId id = 1;

    repeated EvMember member = 2;

    repeated EvMemberInvitation invitation = 3;
}

message EvUserSignUp {
    option (entity).kind = PROCESS_MANAGER;

    spine.core.UserId user_id = 1;

    EvMemberInvitation invitation = 2;
}
